--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1990,8 +1990,8 @@ section {
 #footer .social-links a {
   font-size: 18px;
   display: inline-block;
-  background: #f03c02;
-  color: #fff;
+  background: #122620;
+  color: #D6AD60;
   line-height: 1;
   padding: 8px 0;
   margin-right: 4px;
@@ -2003,12 +2003,28 @@ section {
 }
 
 #footer .social-links a:hover {
-  background: #fd5c28;
+  background: #B68D40;
   color: rgb(255, 255, 255);
   text-decoration: none;
 }
 td {
   text-align: center;
 }
-tr:nth-child(even) {
-  background-color: #A9A9A9;
+table, th, td {
+  border: 2px solid black;
+  border-collapse: collapse;
+}t
+d, th {
+  border: 2px solid #000000;
+  text-align: center;
+  padding: 10px;
+  table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 150%;
+  }
+img {
+  float: left;
+  max-width: 50;
+  max-height: 50;
+}
