--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1156,7 +1156,7 @@ section {
 
 .pricing h4 {
   font-size: 42px;
-  color: #D6AD60;
+  color: #f03c02;
   font-weight: 500;
   font-family: "Open Sans", sans-serif;
   margin-bottom: 20px;
@@ -1217,7 +1217,7 @@ section {
 }
 
 .pricing .featured {
-  background: #B68D40;
+  background: #fd5c28;
   box-shadow: none;
 }
 
@@ -1240,7 +1240,7 @@ section {
 }
 
 .pricing .featured .btn-buy:hover {
-  color: #806d67;
+  color: #f03c02;
   background: #fff;
   border-color: #fff;
 }
@@ -1250,7 +1250,7 @@ section {
 --------------------------------------------------------------*/
 .cta-pricing {
   background: #f3f1f0;
-  color: #B68D40;
+  color: #65534c;
 }
 
 .cta-pricing h3 {
@@ -1270,8 +1270,8 @@ section {
   transition: 0.4s;
   margin: 10px;
   border-radius: 4px;
-  border: 2px solid #D6AD60;
-  color: #D6AD60;
+  border: 2px solid #f03c02;
+  color: #f03c02;
   background: #fff;
 }
 
