--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1217,7 +1217,7 @@ section {
 }
 
 .pricing .featured {
-  background: #fd5c28;
+  background: #D6AD60;
   box-shadow: none;
 }
 
@@ -1250,7 +1250,7 @@ section {
 --------------------------------------------------------------*/
 .cta-pricing {
   background: #f3f1f0;
-  color: #65534c;
+  color: #B68D40;
 }
 
 .cta-pricing h3 {
